yourls/components/yourls/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: '1'
  name: <CLUSTER_NAME>-yourls
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: yourls.<DOMAIN_NAME>
      http:
        paths:
          - backend:
              service:
                name: yourls
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - yourls.<DOMAIN_NAME>
      secretName: yourls-tls
